kubernetes/traefik/manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      namespace: traefik
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      volumes:
        - name: acme-storage-volume
          persistentVolumeClaim:
            claimName: acme-storage-claim
      containers:
        - name: traefik
          image: traefik:v2.10
          args:
          - --api.insecure=true
          - --api.dashboard=true
          - --accesslog
          - --metrics.prometheus=true
          - --metrics.prometheus.addEntryPointsLabels=true
          - --metrics.prometheus.addServicesLabels=true
          - --entryPoints.metrics.address=:8082
          - --metrics.prometheus.entryPoint=metrics
          - --entrypoints.web.Address=:80
          - --entrypoints.websecure.Address=:443
          - --entrypoints.websecure.http.tls=true
          - --log.level=DEBUG
          - --ping
          - --providers.kubernetescrd=true
          - --providers.kubernetesIngress=true
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 50Mi
          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: dashboard
              containerPort: 8080
            - name: metrics
              containerPort: 8082
          volumeMounts:
            - name: acme-storage-volume
              mountPath: /acme
              subPath: ""
