kubernetes/traefik/manifests/dashboard.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: traefik
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: dashboard
  selector:
    app: traefik
