kubernetes/traefik/manifests/web.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: traefik
  annotations:
    metallb.universe.tf/address-pool: public
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: websecure
      port: 443
      targetPort: websecure
  selector:
    app: traefik
